tests/types/errors/index_not_int.mochi
let xs = [1]
let y = xs["a"]
